# nevr-runtime

./: .gitignore  .gitmodules  .opencode  AGENTS.md  BUGS.md  CLAUDE.md  CMakeLists.txt  CMakePresets.json  FIXPLAN.md  Makefile  PATCH_ANALYSIS.md  README.md  Windows.h  buf.gen.yaml  build.bat  configure.bat  justfile  launch-client.sh  ready-at-dawn-echo-arena  run-server.sh  test-client.sh  test-headless-server-crash.sh  test-headless-server.sh  test_define.cpp  vcpkg.json  winsock2.h
GamePatches/: CMakeLists.txt  patch_addresses.h  patches.cpp  patches.h  processmem.h
GamePatchesLegacy/: CMakeLists.txt  dllmain.cpp  exports.def  patches.cpp
GameServer/: CMakeLists.txt  constants.h  dllmain.cpp  exports.def  gameserver.cpp  gameserver.h  messages.cpp  messages.h  servercontext.cpp  servercontext.h
GameServerLegacy/: CMakeLists.txt  dllmain.cpp  gameserver.cpp  gameserver.h  messages.h  websocket_client.cpp  websocket_client.h
GameServerLegacy/common/: echovr.h
ProtobufNEVR/: CMakeLists.txt
common/: CMakeLists.txt  echovr.h  echovrInternal.cpp  echovrInternal.h  globals.cpp  globals.h  logging.cpp  logging.h  platform_stubs.h  symbols.h
extras/customassets/: CMakeLists.txt  README.md  REVERSE_ENGINEERING_SPEC.md  asset_converter.cpp  asset_converter.h  asset_interceptor.cpp  asset_interceptor.h  cache_manager.cpp  cache_manager.h  config_manager.cpp  config_manager.h  custom_assets.cpp  custom_assets.h  dllmain.cpp  example-asset.json  example-config.json  exports.def  http_client.cpp  http_client.h
extras/dbghooks/: CMakeLists.txt  CMakeLists.txt.bak  CMatSymHashes.h  DllLoader.cpp  ExeToDllLoader.cpp  INTEGRATION_REPORT.yaml  README.md  SNSMessageHashes.h  TestDLL.cpp  VR_TRIGGER_COMPREHENSIVE_TRACE_DEPLOYMENT.md  VR_TRIGGER_TRACE_QUICK_START.md  WEAPON_HOOKS_DEPLOYMENT_SUMMARY.txt  WEAPON_PATCH_ROADMAP.md  WEAPON_SYSTEM_TRACE_QUICK_REF.md  WEAPON_SYSTEM_TRACE_TEST_GUIDE.md  WEAPON_VFX_AUDIT.md  X_KEY_TRIGGER_SIMULATION.md  booster_test_hook.cpp  booster_test_hook.h  dllmain.cpp  dllmain.cpp.bak  echovr_launcher.cpp  exports.def  extend_echovr.py  gamestart_hooks.cpp  gamestart_hooks.h  generate_sns_hashes.py  gun2cr_hook.cpp  gun2cr_hook.h  hash_hooks.cpp  hash_hooks.h  mesh_dump_hooks.cpp  mesh_dump_hooks.h  parse_hash_log.py  static_entry.cpp  static_entry.h  test_launcher.sh  vr_trigger_comprehensive_trace.cpp  vr_trigger_comprehensive_trace.h  vr_trigger_test_hook.cpp  (+5 more)
extras/dbghooks/config/: autoload.yaml  json_overrides.json
extras/dbghooks/gun2cr_fix/: CMakeLists.txt  HOOK_ADDRESSES.md  MANIFEST.yaml  README.md  TROUBLESHOOT.md  WEAPON_ENABLER_README.md  gun2cr_config.ini  gun2cr_hook.cpp  loader.cpp  loader.h  verify.py  weapon_config.json  weapon_enabler.cpp  weapon_enabler.h
extras/dbghooks/json_override_hook/: MANIFEST.yaml  README.md  json_override_hook.cpp  json_override_hook.h
extras/dbghooks/universal_weapon_fix/: MANIFEST.yaml  loader.cpp  loader.h  universal_weapon_fix.cpp  universal_weapon_fix.h
extras/pnsnevr/: CMakeLists.txt  README.md  nakama_config.json
extras/pnsnevr/src/: config.cpp  config.h  dllmain.cpp  game_bridge.cpp  game_bridge.h  message_handlers.cpp  message_handlers.h  nakama_client.cpp  nakama_client.h
extras/pnsovr-dll/: BUILD_RESULTS.md  CMakeLists.txt  IMPLEMENTATION_COMPLETE.txt
extras/pnsovr-dll/src/: CustomSocialManager.cpp  CustomSocialManager.h  PNSOVRSocialInterceptor.cpp  PNSOVRSocialInterceptor.h  SocialIntegrationExamples.h  pnsovr_iap.cpp  pnsovr_iap.h  pnsovr_notifications.cpp  pnsovr_notifications.h  pnsovr_plugin.cpp  pnsovr_plugin.h  pnsovr_presence.cpp  pnsovr_presence.h  pnsovr_rooms.cpp  pnsovr_rooms.h  pnsovr_users.cpp  pnsovr_users.h  pnsovr_voip.cpp  pnsovr_voip.h
extras/telemetryagent/: CMakeLists.txt  data_source.h  frame_processor.cpp  memory_poller.cpp  memory_poller.h
gamepatcheslegacy/: CMakeLists.txt
gamepatcheslegacy/common/: echovr.h  pch.h
plugins/: CMakeLists.txt
plugins/anim-debugger/: CMakeLists.txt
plugins/anim-debugger/src/: plugin.cpp
plugins/audio-intercom/: CMakeLists.txt  audio_intercom_config.json
plugins/audio-intercom/src/: audio_intercom.cpp  audio_intercom.h  plugin_main.cpp
plugins/audio-intercom/tests/: test_voip_format.cpp
plugins/broadcaster-bridge/: CMakeLists.txt  broadcaster_bridge_config.json
plugins/broadcaster-bridge/src/: broadcaster_bridge.cpp  broadcaster_bridge.h  plugin_main.cpp
plugins/broadcaster-bridge/tests/: test_wire_format.cpp
plugins/combat-2d/: CMakeLists.txt
plugins/combat-2d/src/: plugin.cpp
plugins/combat-mod/: CMakeLists.txt
plugins/combat-mod/src/: combat_log.h  combat_system.cpp  combat_system.h  level_detect.cpp  level_detect.h  mode_patch.cpp  mode_patch.h  plugin.cpp  plugin_log.h  resource_inject.cpp  resource_inject.h  safe_memory.h  script_patch.cpp  script_patch.h  start_visible.cpp  start_visible.h
plugins/combat-mod/tests/: test_safe_memory.cpp
plugins/combat-patch/: CMakeLists.txt  combat_patch_config.json
plugins/combat-patch/src/: combat_patch.cpp  combat_patch.h  plugin_main.cpp
plugins/common/: CMakeLists.txt
plugins/common/include/: address_registry.h  auth_token_refresh.h  hook_manager.h  nevr_common.h  nevr_curl.h  plugin_logger.h  resource_registry.h  yaml_config.h
plugins/crash-handler/: CMakeLists.txt
plugins/crash-handler/src/: plugin.cpp
plugins/filesystem-loader/: CMakeLists.txt  filesystem_loader_config.json
plugins/filesystem-loader/src/: filesystem_loader.cpp  filesystem_loader.h  plugin_main.cpp
plugins/game-rules-override/: CMakeLists.txt  game_rules_override.jsonc
plugins/log-filter/: CMakeLists.txt  log_filter_config.jsonc  log_filter_config.yml
plugins/log-filter/src/: log_filter.cpp  (+2 more)
plugins/pnsrad-enabler/: CMakeLists.txt
plugins/server-timing/: CMakeLists.txt  server_timing_config.json  server_timing_config.yml
plugins/session-unlocker/: CMakeLists.txt
plugins/skip-splash/: CMakeLists.txt
plugins/social-bridge/: CMakeLists.txt
plugins/token-auth/: CMakeLists.txt
telemetryagent/: CMakeLists.txt  frame_processor.h  telemetry_agent.h
(+470 files in other folders)
